[package]
name = "solana-indexer-metrics-log"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
solana-indexer-core = { workspace = true }

async-trait = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lib]
crate-type = ["rlib"]
